syntax = "proto3";

package auth;

option go_package = "./;auth";

service AuthService {
      rpc Register(RegisterRequest) returns (AuthResponse);
      rpc Login(LoginRequest) returns (AuthResponse);
}

message RegisterRequest{
      string name = 1;
      string email = 2;
      string password = 3;
}

message LoginRequest{
      string email = 1;
      string password = 2;
}

message AuthResponse{
      string user_id = 1;
      string token = 2;
      string message = 3;
}
