syntax = "proto3";

package user;

option go_package = "github.com/savanyv/digital-wallet/proto/user";

service UserService {
      rpc CreateUser (CreateUserRequest) returns (UserResponse);
      rpc GetUser (GetUserRequest) returns (UserResponse);
      rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
}

message CreateUserRequest {
      int64 user_id = 1;
      string name = 2;
      string email = 3;
}

message GetUserRequest {
      int64 user_id = 1;
}

message GetUserByEmailRequest {
      string email = 1;
}

message UserResponse {
      int64 user_id = 1;
      string name = 2;
      string email = 3;
      string message = 4;
}
